--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-annotation": "^3.0.1",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
