--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ag-grid-community": "^29.3.5",
     "ag-grid-enterprise": "^29.3.5",
     "ag-grid-react": "^29.3.5",
+    "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
@@ -25,6 +26,7 @@
     "chartjs-plugin-annotation": "^3.0.1",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0"
